Sat Dec  1 15:13:33 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/resolv.rb: documentation update.  backported from 1.9.
	  [ruby-core:13273]

Sat Dec  1 03:30:47 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (newline_node): set line from outermost node before removing
	  NODE_BEGIN.  [ruby-dev:32406]

Fri Nov 30 21:53:28 2007  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/rss.rb, test/rss/test_version.rb: 0.2.0 -> 0.2.1.

	* lib/rss/content.rb, lib/rss/content/1.0.rb,
	lib/rss/content/2.0.rb, lib/rss/maker/content.rb,
	test/rss/rss-testcase.rb, test/rss/test_content.rb,
	test/rss/test_maker_content.rb: supported content:encoded with RSS
	2.0.
	Suggested by Sam Lown. Thanks.

	* NEWS: added the above changes.

Thu Nov 29 16:59:10 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (stmt): remove unnecessary NODE_BEGIN.  [ruby-core:13814]

Wed Nov 28 14:43:14 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (extract_makefile): use dldflags instead of DLDFLAGS to
	  get rid of mixing $LDFLAGS and $ARCH_FLAG.

	* lib/mkmf.rb (configuration): ditto.

	* lib/mkmf.rb (create_makefile): support for extensions which has no
	  shared object.

Wed Nov 28 09:51:42 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (rb_big2str0): do not clobber space for sign.

	* sprintf.c (remove_sign_bits): extends sign bit first.

Wed Nov 21 01:04:12 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* object.c (nil_plus): remove unused function.  [ruby-core:13737]

Sun Nov 18 14:03:44 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_alias): do not call hook functions until initialization
	  finishes.  [ruby-talk:279538]

Sun Nov 18 09:09:48 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (String#tr_cpp): make preprocessor identifiers.

Sat Nov 17 13:58:11 2007  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_invoke): bug fix. [ruby-talk:279100]
