@@ -1,3 +1,11 @@
+Wed Dec  2 01:12:15 2007  James Edward Gray II  <jeg2@ruby-lang.org>
+
+	Merged 14070 from trunk.
+	
+	* lib/xmlrpc/server.rb (XMLRPC::Server#server): Improve signal handling so
+	  pressing control-c in the controlling terminal or sending SIGTERM stops
+	  the XML-RPC server.
+
 Sat Dec  1 15:13:33 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* lib/resolv.rb: documentation update.  backported from 1.9.
